--- a/requirements_FastAPI.txt
+++ b/requirements_FastAPI.txt
@@ -5,3 +5,8 @@ pytest
 
 # SQLITE installation
 # VS code Extension: SQLite Viewer (by Florian Klampfer)
+
+# Postman: 
+#   Online
+#   App on m/c
+#   VasCode Extension
